Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -3,7 +3,7 @@
 
 
 
-<p>California is responding to rising case rates with an updated tier assignment framework.</p>
+<p>California is responding to rapidly rising case rates with an updated tier assignment framework.</p>
 
 
 
