deploy: 70cb2b8442e0b01a25bbc5b2d3802ad610ee3a0c

--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Stay home Q&#038;A</h1>
           
-            <p class="small-text">Last updated&nbsp;October 29, 2020 at 3:31 PM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 10:49 AM</p>
           
         </div>
       </div>
@@ -395,12 +395,7 @@
 <p>Yes, some outdoor gatherings are permitted, but they must meet certain conditions. This is because gatherings pose an especially high danger of transmission and spread of COVID-19.</p>
 <p>Gatherings are defined as events that bring together people from multiple households in one space, indoors or outdoors. That space could be as large as an arena or as small as a private home.&nbsp;</p>
 <p>On May 25, 2020, in an effort to balance First Amendment interests with public health, the State Public Health Officer created an exception to the prohibition against mass gatherings for faith-based services, cultural ceremonies, and protests. Those types of gatherings are now permitted indoors in counties in Substantial (red), Moderate (orange), and Minimal (yellow) tiers, subject to <a href="https://covid19.ca.gov/industry-guidance/#worship">certain restrictions</a> in those counties.&nbsp;</p>
-<p>State public health directives also permit in-person outdoor faith-based services or protests as long as face coverings are worn and physical distancing of 6 feet between persons or groups of persons from different households is maintained at all times.&nbsp;</p>
-<p>As of October 9, 2020, outdoor private gatherings are allowed under the following conditions:</p>
-<ul><li>Attendees must be from no more than 3 separate households</li><li>Duration should be 2 hours or less</li></ul>
-<p>At any gathering, observe these safety protocols:</p>
-<ul><li>Wear a&nbsp; mask, practice physical distancing, and wash your hands frequently</li><li>Do not attend if you have <a href="https://covid19.ca.gov/symptoms-and-risks/">COVID-19 symptoms</a>&nbsp;</li><li>Do not attend if you are at <a href="https://covid19.ca.gov/symptoms-and-risks/#higher-risk">high risk for serious illness</a> from COVID-19 (seniors, those with certain medical conditions)</li></ul>
-<p>Read more details in the state’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/CDPH-Guidance-for-the-Prevention-of-COVID-19-Transmission-for-Gatherings-10-09.aspx">private gatherings guidance</a>. Be aware that local health departments may have additional restrictions.</p>
+<p>State public health directives also permit in-person outdoor faith-based services or protests as long as face coverings are worn and physical distancing of 6 feet between persons or groups of persons from different households is maintained at all times.</p>
 <p>Crowds and limited physical distancing increase the risk for COVID-19. If you attended a gathering, remember that <a href="https://covid19.ca.gov/get-tested/">confidential, free COVID-19 testing</a> is available. If you test negative it does not mean that you may not develop COVID-19 later on. Therefore, it is advisable that you self-isolate for 14 days if possible.</p>
 
       </div>
@@ -427,23 +422,23 @@
 
 
 
+<p>As of October 9, 2020, outdoor private gatherings are allowed under the following conditions:</p>
 
 
 
+<ul><li>Attendees must be from no more than 3 separate households</li><li>Duration should be 2 hours or less</li></ul>
 
 
 
+<p>At any gathering, observe these safety protocols:</p>
 
 
 
+<ul><li>Wear a mask, practice physical distancing, and wash your hands frequently.</li><li>Do not attend if you have <a href="https://covid19.ca.gov/symptoms-and-risks/">COVID-19 symptoms</a>.</li><li>Do not attend if you are at <a href="https://covid19.ca.gov/symptoms-and-risks/#higher-risk">high risk for serious illness</a> from COVID-19 (seniors, those with certain medical conditions).</li></ul>
 
 
 
-
-
-
-
-
+<p>Read more details in the state’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/CDPH-Guidance-for-the-Prevention-of-COVID-19-Transmission-for-Gatherings-10-09.aspx">private gatherings guidance</a>. Be aware that local health departments may have additional restrictions.</p>
 
 
 
@@ -958,9 +953,10 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>You can travel for urgent matters or if such travel is essential to your permitted work. Even though businesses around the state are opening up, avoid travelling long distances for vacations or pleasure as much as possible. This is to slow the spread of the coronavirus. Do not travel if you are sick, or if someone in your household has had coronavirus in the last two weeks. Do not travel with someone who is sick. </p>
+<p>Stay in your county if you can. Don’t drive more than 2-3 hours.</p>
+<p>You can travel for urgent matters or if such travel is essential to your permitted work. Even though businesses around the state are opening up, avoid traveling long distances for vacations or pleasure as much as possible. This is to slow the spread of the coronavirus. Do not travel if you are sick, or if someone in your household has had coronavirus in the last two weeks. Do not travel with someone who is sick. </p>
 <p>You should check with the local health department where you are starting from, along your route, and at your planned destination for information. Know that local rules are constantly changing and may change even after you start your trip. <a href="https://www.visitcalifornia.com/latest-covid-19-coronavirus">Check for travel updates</a> before you leave your home.</p>
-<p>Before travelling away from your community, consider these questions from the <a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/travel-in-the-us.html">Center for Disease Control (CDC) travel guidance</a>:</p>
+<p>Before traveling away from your community, consider these questions from the <a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/travel-in-the-us.html">Center for Disease Control (CDC) travel guidance</a>:</p>
 <ul><li>Is coronavirus spreading where you are traveling?</li><li>Are you or those you are traveling with more likely to get very sick from coronavirus?</li><li>Will you be able to keep 6 feet of physical distance from others during or after your trip?</li></ul>
 <div><!-- wedding, travel, gathering, tourism, funeral, motel, vacation, airbnb, vrbo, rental home --></div>
 <p>If you do travel, take steps to keep everyone safe like wearing a face covering, keeping 6 feet of physical distance from those not in your household, and washing your hands frequently.&nbsp;&nbsp;</p>
@@ -969,6 +965,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -1007,11 +1007,16 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>To prevent further spread of COVID-19, Californians should not travel significant distances and should stay close to home as much as possible.</p>
+<p>Stay in your county if you can. Don’t drive more than 2-3 hours.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -1029,8 +1034,8 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>There are currently no restrictions for entering California if you are coming from another state in the U.S. The federal government has placed restrictions on certain international travelers. With specific exceptions, foreign nationals who visited certain countries during the past 14 days are prohibited from entry to the United States. All travelers should take safety precautions when considering traveling.·&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-<ul><li>Don’t travel if you have been sick in the past 14 days or if you live with someone with COVID-19·&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li><li>Don’t travel with someone who is sick</li><li>Wear a mask in public</li><li>Wash your hands</li><li>Keep 6 feet from anyone you don’t live with</li></ul>
+<p>There are currently no restrictions for entering California if you are coming from another state in the U.S. The federal government has placed restrictions on certain international travelers. With specific exceptions, foreign nationals who visited certain countries during the past 14 days are prohibited from entry to the United States. All travelers should take safety precautions when considering traveling.</p>
+<ul><li>Do not travel if you have been sick in the past 14 days or if you live with someone with COVID-19.</li><li>Do not travel with someone who is sick.</li><li>Wear a mask in public.</li><li>Wash your hands.</li><li>Keep 6 feet from anyone you do not live with.</li></ul>
 
       </div>
     </div>
