deploy: 09fd9119317deb8f9526e0e7d56d66f6a56eb6e9

--- a/ar/safer-economy/index.html
+++ b/ar/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>برامج تخطيطية لاقتصاد أكثر أمانا</h1>
           
-            <p class="small-text">Last updated&nbsp;10:52 ص الساعة 16 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;11:12 ص الساعة 16 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*قد تخضع المقاطعات الصغيرة (تلك التي يقل عدد سكانها عن 106,000 نسمة) لتدابير بديلة لتقييم الحالات لأغراض تحديد الفئة.</br> **لا يتم تطبيق مقياس العدالة الصحية على المقاطعات الصغيرة. ولا يُستخدم مقياس العدالة الصحية إلا للانتقال إلى فئة أقل تقييدًا.</p>
-<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center" id="county-status">مهام الفئة الحالية اعتبارًا من 10 نوفمبر 2020</h3>
+<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center" id="county-status">مهام الفئة الحالية اعتبارًا من 16 نوفمبر 2020</h3>
 
 
 
@@ -201,7 +201,7 @@
 
 
 
-<p class="small-text">تعتمد جميع البيانات ومهام الفئة على نتائج الأسبوع المنتهي 31 أكتوبر 2020. تعرَّف على كيفية تخصيص الفئات وتغييرها، بالإضافة إلى البيانات التاريخية للمقاطعة (<strong>الرسم البياني لمخطط كاليفورنيا</strong>) على <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">صفحة توجيهات إدارة الصحة العامة في كاليفورنيا</a>.</p>
+<p class="small-text">تعتمد جميع البيانات ومهام الفئة على نتائج الأسبوع المنتهي 10 نوفمبر 2020. تعرَّف على كيفية تخصيص الفئات وتغييرها، بالإضافة إلى البيانات التاريخية للمقاطعة (<strong>الرسم البياني لمخطط كاليفورنيا</strong>) على <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">صفحة توجيهات إدارة الصحة العامة في كاليفورنيا</a>.</p>
 
 
 
