--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 16, 2020 sa 10:52 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 16, 2020 sa 11:12 AM</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*Puwedeng mapailalim ang maliliit na county (na wala pang 106,000 ang populasyon) sa ibang pag-iingat para sa pagtatasa ng kaso para sa mga layunin ng pagtatalaga ng tier.</br> **Hindi inilalapat ang sukatan ng equity sa kalusugan sa maliliit na county. Ginagamit ang sukatan ng equity sa kalusugan para makausad sa mas maluwag na tier.</p>
-<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center" id="county-status">Kasalukuyang pagtatalaga ng tier mula Nobyembre 10, 2020</h3>
+<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center" id="county-status">Kasalukuyang pagtatalaga ng tier mula Nobyembre 16, 2020</h3>
 
 
 
@@ -201,7 +201,7 @@
 
 
 
-<p class="small-text">Nakabatay ang lahat ng datos at pagtatalaga ng tier sa mga resulta mula sa linggong natapos noong Oktubre 31, 2020. Tingnan kung paano itinatalaga at binabago ang mga tier, pati na rin ang dating datos ng county (<strong>California Blueprint Data Chart</strong>) sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">page ng gabay ng Departamento ng Pampublikong Kalusugan ng California (California Department of Public Health)</a>.</p>
+<p class="small-text">Nakabatay ang lahat ng datos at pagtatalaga ng tier sa mga resulta mula sa linggong natapos noong Nobyembre 10, 2020. Tingnan kung paano itinatalaga at binabago ang mga tier, pati na rin ang dating datos ng county (<strong>California Blueprint Data Chart</strong>) sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">page ng gabay ng Departamento ng Pampublikong Kalusugan ng California (California Department of Public Health)</a>.</p>
 
 
 
