--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,10 +1,10 @@
 
-<h2 class="h3 text-primary">Guidance for out-of-state travel</h2>
+<h2 class="h3 text-primary">Blueprint for a Safer Economy update</h2>
 
 
 
-<p>California has released guidance for people traveling into and out of the state.</p>
+<p>California is responding to rapidly rising case rates with an updated tier assignment framework.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Learn more</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">Learn about the changes</a></p>
