--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Stay home Q&#038;A</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 10:49 AM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 11:25 AM</p>
           
         </div>
       </div>
@@ -392,10 +392,15 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Yes, some outdoor gatherings are permitted, but they must meet certain conditions. This is because gatherings pose an especially high danger of transmission and spread of COVID-19.</p>
-<p>Gatherings are defined as events that bring together people from multiple households in one space, indoors or outdoors. That space could be as large as an arena or as small as a private home.&nbsp;</p>
-<p>On May 25, 2020, in an effort to balance First Amendment interests with public health, the State Public Health Officer created an exception to the prohibition against mass gatherings for faith-based services, cultural ceremonies, and protests. Those types of gatherings are now permitted indoors in counties in Substantial (red), Moderate (orange), and Minimal (yellow) tiers, subject to <a href="https://covid19.ca.gov/industry-guidance/#worship">certain restrictions</a> in those counties.&nbsp;</p>
-<p>State public health directives also permit in-person outdoor faith-based services or protests as long as face coverings are worn and physical distancing of 6 feet between persons or groups of persons from different households is maintained at all times.</p>
+<p>Yes, with modifications.</p>
+<p>Gatherings are defined as events that bring together people from multiple households in one space, indoors or outdoors. That space could be as large as a park or as small as a private home. </p>
+<p>Some private gatherings are permitted by the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Guidance-for-the-Prevention-of-COVID-19-Transmission-for-Gatherings-November-2020.aspx">guidance for private gatherings</a>. This guidance does not impact sectors that have their own guidance, such as <a href="https://covid19.ca.gov/stay-home-except-for-essential-needs/#political">protest</a>, <a href="https://covid19.ca.gov/stay-home-except-for-essential-needs/#political">political rallies</a>, <a href="https://covid19.ca.gov/industry-guidance/#worship">cultural ceremonies</a>, <a href="https://covid19.ca.gov/industry-guidance/#worship">worship</a>, and <a href="https://covid19.ca.gov/industry-guidance/#restaurants">dining</a>.</p>
+<p>Private gatherings that are not covered by existing sector guidance are permitted with certain restrictions. Specifically, indoor and outdoor private gatherings are allowed in Substantial (red), Moderate (orange), and Minimal (yellow) tiers. Only outdoor private gatherings are allowed in the Widespread (purple) tier.</p>
+<p>These requirements apply to private gatherings in all tiers:&nbsp;</p>
+<ul><li>Wear masks and physically distance from other attendees.</li><li>Limit gatherings to no more than 3 separate households attend (including the host’s).</li><li>Do not attend if you have symptoms of COVID-19.</li><li>Singing, shouting, chanting, cheering, or exercising is strongly discouraged at outdoor gatherings and not permitted at indoor gatherings.</li></ul>
+<p>Private gatherings should be two hours or less, and people with a high risk of severe illness are strongly encouraged not to attend.</p>
+<p>First Amendment activities that are not already permitted by other guidance can take place in accordance with the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Guidance-for-the-Prevention-of-COVID-19-Transmission-for-Gatherings-November-2020.aspx">guidance for private gatherings</a>.</p>
+<p>More information on private gatherings and the explanation for these restrictions is available from the <a href="https://www.cdph.ca.gov/">California Department of Public Health</a>.</p>
 <p>Crowds and limited physical distancing increase the risk for COVID-19. If you attended a gathering, remember that <a href="https://covid19.ca.gov/get-tested/">confidential, free COVID-19 testing</a> is available. If you test negative it does not mean that you may not develop COVID-19 later on. Therefore, it is advisable that you self-isolate for 14 days if possible.</p>
 
       </div>
@@ -422,23 +427,23 @@
 
 
 
-<p>As of October 9, 2020, outdoor private gatherings are allowed under the following conditions:</p>
 
 
 
-<ul><li>Attendees must be from no more than 3 separate households</li><li>Duration should be 2 hours or less</li></ul>
 
 
 
-<p>At any gathering, observe these safety protocols:</p>
 
 
 
-<ul><li>Wear a mask, practice physical distancing, and wash your hands frequently.</li><li>Do not attend if you have <a href="https://covid19.ca.gov/symptoms-and-risks/">COVID-19 symptoms</a>.</li><li>Do not attend if you are at <a href="https://covid19.ca.gov/symptoms-and-risks/#higher-risk">high risk for serious illness</a> from COVID-19 (seniors, those with certain medical conditions).</li></ul>
 
 
 
-<p>Read more details in the state’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/CDPH-Guidance-for-the-Prevention-of-COVID-19-Transmission-for-Gatherings-10-09.aspx">private gatherings guidance</a>. Be aware that local health departments may have additional restrictions.</p>
+
+
+
+
+
 
 
 
