deploy: b188494d4f832e74aa19a0afff59f7259eb304da

--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 10:48 AM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 11:44 AM</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
 
 
 
-<p><strong>People in California <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Guidance-for-Face-Coverings_06-18-2020.pdf">must wear face coverings</a> when they are outside of the home</strong>, unless one of the exemptions below applies.</p>
+<p><strong>People in California <strong><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/guidance-for-face-coverings.aspx">must wear face coverings</a></strong></strong> <strong>when they are outside of the home</strong>, unless one of the exemptions below applies.</p>
 
 
 
@@ -194,7 +194,7 @@
 
 
 
-<p>Coronavirus spreads when an infected person coughs, sneezes, sings, talks, or breathes &nbsp;within 6 feet of others. You may have the virus and spread it even if you feel well.&nbsp;</p>
+<p>Coronavirus spreads when an infected person coughs, sneezes, sings, talks, or breathes within 6 feet of others. You may have the virus and spread it even if you feel well. </p>
 
 
 
@@ -351,6 +351,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
+<p>Yes. You should wear face coverings whenever you are outside of your home, unless one of the exceptions described by the state applies to you. Face coverings help reduce the spread of COVID-19. Cloth masks can reduce your exposure to infectious droplets through filtration.</p>
 <p>The California Department of Public Health (CDPH) has released <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Guidance-for-Face-Coverings_06-18-2020.pdf">guidance for the use of face coverings</a>.<strong>&nbsp;</strong></p>
 <p>The guidance reminds Californians that the best defense against COVID-19 continues to be:&nbsp;</p>
 <ul><li>Maintain six feet of physical distance from others&nbsp;</li><li>Wash hands frequently</li><li>Avoid touching eyes, nose and mouth with unwashed hands</li><li>Avoid being around people with COVID-19 symptoms</li></ul>
@@ -363,7 +364,7 @@
 
 
 
-<p>Yes. You should wear face coverings whenever you are outside of your home, unless one of the exceptions described by the state applies to you. Face coverings help reduce the spread of COVID-19. Cloth masks can reduce your exposure to infectious droplets through filtration.</p>
+
 
 
 
@@ -411,7 +412,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Multi-layer cloth masks can both block up to 50-70% of fine droplets and particles, and limit the forward spread of those that are not captured. Their primary role is to reduce the release of infectious particles into the air when someone coughs, sneezes, sings, talks, or breathes.. Cloth masks can also reduce your exposure to infectious droplets through filtration. Face coverings are not a substitute for physical distancing, washing hands, and staying home when ill, but complements them.</p>
+<p>Multi-layer cloth masks can both block up to 50-70% of fine droplets and particles, and limit the forward spread of those that are not captured. Their primary role is to reduce the release of infectious particles into the air when someone coughs, sneezes, sings, talks, or breathes. Cloth masks can also reduce your exposure to infectious droplets through filtration. Face coverings are not a substitute for physical distancing, washing hands, and staying home when ill, but complements them.</p>
 
       </div>
     </div>
