deploy: 8730b93b4e0b5db4d943b87c53fdd00c68acdad5

--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 11:44 AM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 11:50 AM</p>
           
         </div>
       </div>
@@ -198,7 +198,7 @@
 
 
 
-<p><strong>To prevent infection, you must cover your nose and mouth when outside your home. </strong>So <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Guidance-for-Face-Coverings_06-18-2020.pdf">wearing a mask is now required statewide</a>. Wearing a mask or cloth face covering can slow the spread of COVID-19 by limiting the release of virus into the air. Cloth masks can reduce your exposure to infectious droplets through filtration. It also reinforces physical distancing, and shows you care about the health of others.&nbsp;</p>
+<p><strong>To prevent infection, you must cover your nose and mouth when outside your home. </strong>So <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/guidance-for-face-coverings.aspx">wearing a mask is now required statewide</a>. Wearing a mask or cloth face covering can slow the spread of COVID-19 by limiting the release of virus into the air. Cloth masks can reduce your exposure to infectious droplets through filtration. It also reinforces physical distancing, and shows you care about the health of others. </p>
 
 
 
@@ -210,7 +210,7 @@
 
 
 
-<p>Read the official <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Guidance-for-Face-Coverings_06-18-2020.pdf">mask guidance from the California Department of Public Health</a>. (Lee las <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Guidance-for-Face-Coverings_06-18-2020_(SP).pdf">reglas de la máscara en español</a>.) </p>
+<p><strong>Read the official </strong><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/guidance-for-face-coverings.aspx"><strong>mask guidance from the California Department of Public Health</strong></a><strong>.</strong></p>
 
 
 
@@ -352,7 +352,7 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Yes. You should wear face coverings whenever you are outside of your home, unless one of the exceptions described by the state applies to you. Face coverings help reduce the spread of COVID-19. Cloth masks can reduce your exposure to infectious droplets through filtration.</p>
-<p>The California Department of Public Health (CDPH) has released <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Guidance-for-Face-Coverings_06-18-2020.pdf">guidance for the use of face coverings</a>.<strong>&nbsp;</strong></p>
+<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Face-Coverings-Guidance.aspx">The </a>California Department of Public Health (CDPH) has released <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/guidance-for-face-coverings.aspx">guidance for the use of face coverings</a>.</p>
 <p>The guidance reminds Californians that the best defense against COVID-19 continues to be:&nbsp;</p>
 <ul><li>Maintain six feet of physical distance from others&nbsp;</li><li>Wash hands frequently</li><li>Avoid touching eyes, nose and mouth with unwashed hands</li><li>Avoid being around people with COVID-19 symptoms</li></ul>
 
