--- a/tl/state-dashboard/index.html
+++ b/tl/state-dashboard/index.html
@@ -351,7 +351,7 @@
                 </div>
 
                 <h3 class="has-text-align-center pb-0 mb-2 mt-3">Current tier assignments as of Nobyembre 16, 2020</h3>
-                <p class="mt-0">All data and tier assignments are updated weekly every Tuesday.</p>
+                <p class="mt-0">Tier assignments may occur any day of the week and may occur more than once a week.</p>
 
             <div class="tableauPlaceholder" id="mapChartContainer"></div>
         </div>
