--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 11:50 AM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 11:53 AM</p>
           
         </div>
       </div>
@@ -500,7 +500,7 @@
 <ul><li>People must wear masks when traveling into, within, or out of the United States on public conveyances.</li><li>Transportation staff should refuse to board anyone not wearing a mask and require all people onboard, whether passengers or employees, to wear masks for the duration of travel, except:<ul><li>For brief periods while eating, drinking, or taking medication.</li><li>If the person is unconscious, incapacitated, unable to be awakened, or otherwise unable to remove the mask without assistance.</li><li>When it’s necessary to temporarily remove the mask to verify one’s identity such as during Transportation Security Administration screening or when asked to do so by the ticket or gate agent or any law enforcement official.</li><li>For children under the age of 2 years old.</li></ul></li></ul>
 <p>Transportation staff should ensure that any person on the vehicle wears a mask when boarding, disembarking, and for the duration of travel.</p>
 <p>For more information, see:&nbsp;</p>
-<ul><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/face-masks-public-transportation.html">Wear Face Masks on Public Transportation Conveyances and at Transportation Hubs</a></li><li><a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Employer Playbook for a Safe Reopening</a> (PDF)</li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Guidance-for-Face-Coverings_06-18-2020.pdf">Guidance for the Use of Face Coverings</a></li></ul>
+<ul><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/face-masks-public-transportation.html">Wear Face Masks on Public Transportation Conveyances and at Transportation Hubs</a></li><li><a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Employer Playbook for a Safe Reopening</a> (PDF)</li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/guidance-for-face-coverings.aspx">Guidance for the Use of Face Coverings</a></li></ul>
 
       </div>
     </div>
@@ -563,10 +563,6 @@
 
 
 <ul><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html">Use of Masks to Help Slow the Spread of COVID-19</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/travelers/face-masks-public-transportation.html">Wear Face Masks on Public Transportation Conveyances and at Transportation Hubs</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/about-face-coverings.html">How to Select, Wear, and Clean Your Mask</a></li><li>CalOSHA: <a href="https://www.dir.ca.gov/dosh/coronavirus/Face-coverings-poster.pdf">Face Coverings, Masks, and Respirators &#8211; When to Use Them to Prevent the Spread of COVID-19</a></li><li>Wear a mask: <a href="https://toolkit.covid19.ca.gov/">Images you can share on social media</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/cloth-face-cover-guidance.html#recent-studies">Emerging evidence on effectiveness of masks</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/more/masking-science-sars-cov2.html">Community Use of Cloth Masks to Control the Spread of SARS-CoV-2</a></li></ul>
-
-
-
-<p></p>
 </div>
     </div>
   </div>
