deploy: 6b1d194fa63326648b5b7bd859088ecda86b3519

--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;November 6, 2020 at 6:53 PM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 11:55 AM</p>
           
         </div>
       </div>
@@ -214,7 +214,7 @@
 
 
 
-<ol><li><strong>Scroll down this page to find the guidance for your industry, business, event, or activity.</strong></li><li>Review it completely.</li><li>Perform a detailed risk assessment and create a worksite-specific protection plan.</li><li>Train employees on how to limit the spread of COVID-19. This includes how to <a href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fsymptoms-testing%2Findex.html">screen themselves for symptoms</a> and when to stay home.</li><li>Set up individual control measures and screenings.</li><li>Put disinfection protocols in place.</li><li>Establish physical distancing guidelines. </li><li>Establish universal face covering requirements (with allowed exceptions). See <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Guidance-for-Face-Coverings_06-18-2020.pdf">CDPH guidelines (PDF)</a>.</li><li>Post your completed checklist so everyone can know the steps you’ve taken. Feel free to add more safety measures to the ones included in your industry’s guidance.</li></ol>
+<ol><li><strong>Scroll down this page to find the guidance for your industry, business, event, or activity.</strong></li><li>Review it completely.</li><li>Perform a detailed risk assessment and create a worksite-specific protection plan.</li><li>Train employees on how to limit the spread of COVID-19. This includes how to <a href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fsymptoms-testing%2Findex.html">screen themselves for symptoms</a> and when to stay home.</li><li>Set up individual control measures and screenings.</li><li>Put disinfection protocols in place.</li><li>Establish physical distancing guidelines. </li><li>Establish universal face covering requirements (with allowed exceptions). See <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/guidance-for-face-coverings.aspx">CDPH guidelines (PDF)</a>.</li><li>Post your completed checklist so everyone can know the steps you’ve taken. Feel free to add more safety measures to the ones included in your industry’s guidance.</li></ol>
 
 
 
@@ -226,7 +226,7 @@
 
 
 
-<ul><li><a href="https://www.dir.ca.gov/dlse/Comparison-COVID-19-Paid-Leave.html">Government programs supporting COVID-19 sick leave</a> and <a href="https://www.labor.ca.gov/coronavirus2019/#chart">workers’ compensation</a></li><li><a href="https://files.covid19.ca.gov/pdf/guidance-family-friendly-practices-employers--en.pdf">Family friendly practices for employers (PDF)</a></li><li><a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--en.pdf">Support for working families (PDF)</a></li><li><a href="https://covid19.ca.gov/childcare/#top">Find childcare</a></li><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Guidance-for-Face-Coverings_06-18-2020.pdf">CDPH guidance for the use of face coverings (PDF)</a></li></ul>
+<ul><li><a href="https://www.dir.ca.gov/dlse/Comparison-COVID-19-Paid-Leave.html">Government programs supporting COVID-19 sick leave</a> and <a href="https://www.labor.ca.gov/coronavirus2019/#chart">workers’ compensation</a></li><li><a href="https://files.covid19.ca.gov/pdf/guidance-family-friendly-practices-employers--en.pdf">Family friendly practices for employers (PDF)</a></li><li><a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--en.pdf">Support for working families (PDF)</a></li><li><a href="https://covid19.ca.gov/childcare/#top">Find childcare</a></li><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/guidance-for-face-coverings.aspx">CDPH guidance for the use of face coverings (PDF)</a></li></ul>
 
 
 
@@ -1440,7 +1440,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="personal-care-services"><span class="ca-gov-icon-info-line"></span> Personal care services&nbsp;&#8211; updated October 20</h4>
+<h4 id="personal-care-services"><span class="ca-gov-icon-nail-polish"></span> Personal care services&nbsp;&#8211; updated October 20</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -1608,7 +1608,7 @@
 <p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-outdoor-live-professional-sports--en.pdf">guidance for professional sports</a> outdoors with live audiences to support a safe, clean environment for workers and guests. This guidance applies to outdoor operations of sporting event venues like stadiums and racetracks. </p>
 <p>This guidance includes additional considerations for:</p>
 <ul><li>Entry and security</li><li>Venue support operations, like sound and lighting</li></ul>
-<p>Review the guidance, prepare a plan, and post the <a href="https://files.covid19.ca.gov/pdf/checklist-outdoor-live-professional-sports--en.pdf">checklist for professional sports</a> in your workplace to show players, coaches, spectators, and workers that you’ve reduced the risk and are open for business. </p>
+<p>Review the guidance, prepare a plan, and post the <a href="https://files.covid19.ca.gov/pdf/checklist-outdoor-live-professional-sports--en.pdf">checklist for professional sports</a> in your workplace to show players, coaches, spectators, and workers that you’ve reduced the risk and are open for business.&nbsp;</p>
 <p>Athletes, coaching staff, medical staff, broadcasting staff and others at sporting facilities or events should refer to COVID-19 protocols agreed to by labor and management. Local health departments may further enhance these protocols. Back office staff and management should follow the <a href="https://files.covid19.ca.gov/pdf/guidance-office-workspaces--en.pdf">guidance for office workspaces</a>.</p>
 <p>Professional sports may resume training and competition without live audiences, subject to approval by county public health officers. This guidance does not apply to semi-professional, amateur, or recreational sports.</p>
 
@@ -2085,12 +2085,12 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="youthsports-guidance"><span class="ca-gov-icon-fitness-alt"></span> Youth sports</h4>
+<h4 id="youthsports-guidance"><span class="ca-gov-icon-soccer"></span> Youth sports</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-youth-sports--en.pdf">guidance for youth sports</a> programs, including school-based, club, and recreational programs. Review the guidance and prepare a plan to support a safe environment for players, coaches and trainers, families, spectators, event/program/facility managers, workers, and volunteers.&nbsp;</p>
+<p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-youth-sports--en.pdf">guidance for youth sports</a> programs, including school-based, club, and recreational programs. Review the guidance and prepare a plan to support a safe environment for players, coaches and trainers, families, spectators, event/program/facility managers, workers, and volunteers. </p>
 <ul><li>Check the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">questions and answers</a> about youth sports.</li><li>Follow the <a href="https://covid19.ca.gov/industry-guidance/#cohort-guidance">guidance related to cohorts</a> of children and youth.</li></ul>
 
       </div>
