--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 1:09 PM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 3:59 PM</p>
           
         </div>
       </div>
@@ -240,7 +240,7 @@
 
 
 
-<p>By helping infected and exposed people self-isolate or quarantine and finding patterns quickly, we can slow the spread of the infection and help avoid <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">outbreaks</a>. This helps California keep people, their loved ones, and their communities safe from infection and serious illness.This also helps us keep our healthcare system below capacity. Contact tracing is a necessary activity that allows us to and safely reopen schools and businesses.</p>
+<p>By helping infected and exposed people self-isolate or quarantine and finding patterns quickly, we can slow the spread of the infection and help avoid <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">outbreaks</a>. This helps California keep people, their loved ones, and their communities safe from infection and serious illness.This also helps us keep our healthcare system below capacity. Contact tracing is a necessary activity that allows us to safely reopen schools and businesses.</p>
 
 
 
@@ -253,7 +253,7 @@
     <div class="col">
       <p><strong>Contact tracing works when you answer the call.</strong></p>
 <p>All you have to do is answer the phone call or respond to the text message sent by your health department. </p>
-<p>Contact tracing is an anonymous way to do your part. The more people answer the call or text, the more lives and jobs California saves and the faster we can re-open schools and businesses and keep them open.. Your information is always kept confidential.
+<p>Contact tracing is an anonymous way to do your part. The more people answer the call or text, the more lives and jobs California saves and the faster we can re-open schools and businesses and keep them open. Your information is always kept confidential.
 </p>
     </div>
 <div class="col-md-auto">
@@ -404,7 +404,7 @@
 
 
 
-<p>If you work, your employer may be required to provide you with <a href="https://covid19.ca.gov/contact-tracing/#Extra-sick-leave">paid sick leave and other benefits</a>. Read more in the <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Employer Playbook for a Safe Reopening (PDF)</a>.</p>
+<p>If you work, your employer may be required to provide you with paid sick leave and other benefits. Read more in the <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Employer Playbook for a Safe Reopening (PDF)</a>.</p>
 
 
 
