--- a/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/restaurants-deliver-home-meals-for-seniors/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered: Home meals for seniors</h1>
           
-            <p class="small-text">Last updated&nbsp;November 9, 2020 at 11:45 AM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 4:01 PM</p>
           
         </div>
       </div>
@@ -246,6 +246,11 @@
 
 
 <p>Reach out to California’s <strong><a href="https://covid19.ca.gov/hotline/">COVID-19 hotline</a> </strong>for questions about coronavirus: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>
+
+
+
+<!-- Ethnio Activation Code -->
+<script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer charset="utf-8"></script>
 </div>
     </div>
   </div>
