deploy: 8c5b76a1f83f42b5ad843d691b89dd3ce8184c96

--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 11:55 AM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 4:09 PM</p>
           
         </div>
       </div>
@@ -2090,7 +2090,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-youth-sports--en.pdf">guidance for youth sports</a> programs, including school-based, club, and recreational programs. Review the guidance and prepare a plan to support a safe environment for players, coaches and trainers, families, spectators, event/program/facility managers, workers, and volunteers. </p>
+<p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-youth-sports--en.pdf">guidance for youth sports</a> programs, including school-based, club, and recreational programs. Review the guidance and prepare a plan to support a safe environment for players, coaches and trainers, families, spectators, event/program/facility managers, workers, and volunteers.&nbsp;</p>
 <ul><li>Check the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">questions and answers</a> about youth sports.</li><li>Follow the <a href="https://covid19.ca.gov/industry-guidance/#cohort-guidance">guidance related to cohorts</a> of children and youth.</li></ul>
 
       </div>
@@ -2110,7 +2110,7 @@
 
 
 <!-- Ethnio Activation Code -->
-<script type="text/javascript" language="javascript" src="//ethn.io/60967.js" async="true" defer="" charset="utf-8"></script>
+<script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>
 
 
 
