--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 5:56 PM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 6:16 PM</p>
           
         </div>
       </div>
@@ -176,6 +176,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--43116 -->November 16, 2020</small></p>
           <div class="card-text" lang="en-US">New actions include pulling an emergency brake in the Blueprint for a Safer Economy and strengthening face covering mandate Vast majority of counties are in the most restrictive tier starting tomorrow SACRAMENTO – As COV...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-302.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--6b75a3a93fbd5ee2e5a1af57b27ddd44 -->November 15, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
