deploy: 14a2ba6b9b516c6415029dacc9be5e1f67b3a105

--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 6:32 PM</p>
+            <p class="small-text">Last updated&nbsp;November 17, 2020 at 6:37 AM</p>
           
         </div>
       </div>
@@ -352,7 +352,7 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Yes. You should wear face coverings whenever you are outside of your home, unless one of the exceptions described by the state applies to you. Face coverings help reduce the spread of COVID-19. Cloth masks can reduce your exposure to infectious droplets through filtration.</p>
-<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Face-Coverings-Guidance.aspx">The </a>California Department of Public Health (CDPH) has released <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/guidance-for-face-coverings.aspx">guidance for the use of face coverings</a>.</p>
+<p>The California Department of Public Health (CDPH) has released <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/guidance-for-face-coverings.aspx">guidance for the use of face coverings</a>.</p>
 <p>The guidance reminds Californians that the best defense against COVID-19 continues to be:&nbsp;</p>
 <ul><li>Maintain six feet of physical distance from others&nbsp;</li><li>Wash hands frequently</li><li>Avoid touching eyes, nose and mouth with unwashed hands</li><li>Avoid being around people with COVID-19 symptoms</li></ul>
 
