--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19數據和工具</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年11月16日, 下午7:03</p>
+            <p class="small-text">最近更新&nbsp;2020年11月17日, 上午6:41</p>
           
         </div>
       </div>
