--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 7:03 PM</p>
+            <p class="small-text">Last updated&nbsp;November 17, 2020 at 6:41 AM</p>
           
         </div>
       </div>
