--- a/pages/translated-posts/new-ar.html
+++ b/pages/translated-posts/new-ar.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">إرشادات حول السفر خارج الولاية</h2>
+<h2 class="h3 text-primary">تحديث البرنامج التخطيطي لاقتصاد أكثر أمانًا</h2>
 
 
 
-<p>وقد أصدرت ولاية كاليفورنيا إرشادات وتوجيهات للأشخاص المسافرين إلى الولاية أو الخروج منها.</p>
+<p>تتصدى كاليفورنيا لمعدلات الحالات المتزايدة بِشكل سريع من خلال إطار عمل محدث لتخصيص الفئات.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">تعرَّف على المزيد</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">تعرف على التغييرات</a></p>
