--- a/pages/translated-posts/new-es.html
+++ b/pages/translated-posts/new-es.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">Orientación para viajes fuera del estado</h2>
+<h2 class="h3 text-primary">Plan para una economía más segura actualizado</h2>
 
 
 
-<p>California publicó una guía para las personas que viajan al estado y fuera de él.</p>
+<p>California está respondiendo al rápido aumento de las tasas de casos con un marco de asignación de niveles actualizado.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Más información</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">Obtenga más información sobre los cambios</a></p>
