--- a/pages/translated-posts/new-tl.html
+++ b/pages/translated-posts/new-tl.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">Gabay sa paglalakbay sa labas ng estado</h2>
+<h2 class="h3 text-primary">Update sa Blueprint para sa isang Mas Ligtas na Ekonomiya</h2>
 
 
 
-<p>Naglabas ng gabay ang California para sa mga taong naglalakbay papasok at palabas ng estado.</p>
+<p>Tinutugunan ng California ang mabilis na pagtaas ng rate ng kaso sa pamamagitan ng na-update na framework ng pagtatalaga ng tier.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Matuto pa</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">Alamin ang mga pagbabago</a></p>
