--- a/pages/translated-posts/new-vi.html
+++ b/pages/translated-posts/new-vi.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">Hướng dẫn khi đi du lịch ngoài tiểu bang</h2>
+<h2 class="h3 text-primary">Cập nhật Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn</h2>
 
 
 
-<p>California đã ban hành hướng dẫn dành cho những người đi du lịch vào và ra khỏi tiểu bang.</p>
+<p>California đang ứng phó với tỷ lệ ca nhiễm gia tăng nhanh chóng với bản cập nhật khung chỉ định cấp.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Tìm hiểu thêm</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">Tìm hiểu về những thay đổi</a></p>
