--- a/pages/translated-posts/new-zh-hant.html
+++ b/pages/translated-posts/new-zh-hant.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">州外旅遊指引</h2>
+<h2 class="h3 text-primary">更安全的經濟藍圖更新</h2>
 
 
 
-<p>加州已為進出本州的旅客發佈指引。</p>
+<p>加州正在利用更新後的等級劃分制度來應對快速上升的患病率。</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">了解更多資訊</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">了解有關變更的資訊</a></p>
