--- a/pages/translated-posts/new-ko.html
+++ b/pages/translated-posts/new-ko.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">타주 여행에 대한 지침</h2>
+<h2 class="h3 text-primary">더욱 안전한 경제를 위한 청사진 업데이트</h2>
 
 
 
-<p>캘리포니아는 타주에서 오거나 타주로 가는 여행자에 대한 지침을 발표하였습니다.</p>
+<p>캘리포니아는 급격한 사례 증가세에 대해 단계 배정 체계를 업데이트하여 대응하고 있습니다.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">더 자세한 사항을 확인하십시오</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">변경 사항을 확인하십시오</a></p>
