--- a/pages/translated-posts/new-zh-hans.html
+++ b/pages/translated-posts/new-zh-hans.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">州外旅游指引</h2>
+<h2 class="h3 text-primary">更安全的经济蓝图更新</h2>
 
 
 
-<p>加州已为进出本州的旅客发布指引。</p>
+<p>加州正在利用更新后的等级划分制度来应对快速上升的患病率。</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">了解更多信息</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">了解有关变更的信息</a></p>
