deploy: 67c205a0fef8ccc76e15a07b2fbd1e259863fd52

--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 17, 2020 at 6:37 AM</p>
+            <p class="small-text">Last updated&nbsp;November 17, 2020 at 11:07 AM</p>
           
         </div>
       </div>
@@ -222,7 +222,7 @@
 
 
 
-<ul><li>Wear masks with two or more layers of washable, breathable fabric.</li><li>Do not wear masks intended for healthcare workers, like an N95 respirator.</li><li>CDC does not recommend the use of gaiters or face shields. They’re still evaluating them and their effectiveness is unknown.</li></ul>
+<ul><li>Wear masks with two or more layers of washable, breathable fabric.</li><li>Do not wear masks intended for healthcare workers, like an N95 respirator.</li><li>CDC does not recommend the use of face shields. They’re still evaluating them and their effectiveness is unknown.</li></ul>
 
 
 
